--- a/rifatt.html
+++ b/rifatt.html
@@ -9,21 +9,11 @@
 </head>
 <body>
     <div class="s-container">
-        <h1>Rifat's Target</h1>
-        <h2>⁕ Physics</h2>
-        <hr>
-        <a href="https://www.youtube.com/watch?v=OU4vHLZM58M">Class 1 - Chapter 9: তরঙ্গ</a>
-        <h2>⁕ Chemistry</h2>
-        <hr>
-        <a href="https://www.youtube.com/watch?v=7bbhGbJv5xk">Class 1 - Chapter 04: রাসায়নিক পরিবর্তন</a>
-        <h2>⁕ Biology</h2>
-        <hr>
-        <a href="https://www.youtube.com/watch?v=D5Ksb-afSK8">Class 1 - Chapter 11: জীবপ্রযুক্তি</a>
-        <a href="https://www.youtube.com/watch?v=gRuppiC1PBc">Class 2 - Chapter 11: জীবপ্রযুক্তি</a>
-        <a href="https://www.youtube.com/watch?v=nWdFyI3c5yM">Class 1 - Chapter 11: জিনতত্ত্ব ও বিবর্তন</a>
-        <a href="https://www.youtube.com/watch?v=MpNGIBH9XHk">Class 2 - Chapter 11: জিনতত্ত্ব ও বিবর্তন</a>
-        <a href="https://www.youtube.com/watch?v=JvaIjV-2fDk">Class 3 - Chapter 11: জিনতত্ত্ব ও বিবর্তন</a>
-        <a href="https://www.youtube.com/watch?v=cF7IIa4v03M">Class 4 - Chapter 11: জিনতত্ত্ব ও বিবর্তন</a>
+       <h1>404!</h1>
+       <h1>Not found.
+        <h2>Domain date expired...</h2>
+       </h1>
     </div>
 </body>
+
 </html>
