--- a/rifatt.html
+++ b/rifatt.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Pre-test Preparetion</title>
+    <title>404</title>
 </head>
 <body>
     <div class="s-container">
@@ -17,3 +17,4 @@
 </body>
 
 </html>
+
